# UMPK-80-Emulator

./: .clang-format  .clangd  .gitignore  1.bat  CMakeLists.txt  README.md  imgui.ini
data/: os.bin.bak  scaned-os.bin.bak
rust/: Cargo.toml  build.rs
rust/src/: main.rs
src/: bus.hpp  controller.hpp  cpu.cpp  cpu.hpp  cumpk80-external.cpp  cumpk80.cpp  disassembler.hpp  display.hpp  dj.hpp  keyboard.hpp  main.cpp  register.hpp  sfml-8seg-display.hpp  temp.hpp  umpk80.hpp  view.hpp  viewcontrol.hpp
src/bus/: adress_bus.hpp  data_bus.hpp
src/core/: _unused_time_period_table.hpp  bus.hpp  cpu.cpp  cpu.hpp  cpu.instructions.cpp  disassembler.hpp  display.hpp  dj.hpp  inttypes.hpp  keyboard.hpp  register.hpp  umpk80.hpp
src/cpu/: cpu.hpp
src/gui/: controller.cpp  controller.hpp  disassemble-result-to-string.cpp  disassemble-result-to-string.hpp  dj.hpp  gui-app-base.hpp  gui-app-compact.hpp  gui-app.hpp  main.cpp  utils.h
src/gui/components/: irenderable.hpp
src/gui/components/ui/: ui-cmd-table.hpp  ui-cpu-control.hpp  ui-decompiler.hpp  ui-io-register.hpp  ui-keyboard.hpp  ui-listing.hpp  ui-memory-dump.hpp  ui-program-loader.hpp  ui-rom.hpp
src/gui/components/ui/display/: ui-display-digit.hpp  ui-display.hpp
src/io/: ram.hpp  rom.hpp
src/ui/: sfml-8seg-display.hpp  tests.hpp  viewcontrol.hpp
src/ui/components/: irenderable.hpp
src/ui/components/ui/: ui-cpu-control.hpp  ui-io-register.hpp
src/ui/components/ui/display/: ui-display-digit.hpp  ui-display.hpp
tauri/src-tauri/: build.rs
tauri/src-tauri/src/: main.rs
tauri/src/app/: page.tsx
